Fixed issue with responsiveness, project complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="subheader">
               Go from absolute beginner to pro with a simplified proccess
             </p>
-            <button>Start now</button>
+            <button class="home__description--button">Start now</button>
           </div>
           <figure>
             <img src="./assets/laptop.png" alt="Homepage image" />
@@ -101,7 +101,7 @@
         <a class="footer__link" href="#about">About</a>
         <a class="footer__link" href="#contact">Contact</a>
       </div>
-      <p>Copyright Frontend Simplified</p>
+      <p class="footer__copyright">Copyright Frontend Simplified</p>
     </footer>
   </body>
 </html>
